--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "deploy": "npm run build && npx vercel ./dist"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "vite": "^2.8.0",
+    "@vitejs/plugin-react": "^1.0.7"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -32,7 +37,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.0",
     "prettier": "^2.5.1",
-    "sass": "^1.50.1",
-    "vite": "^2.8.0"
+    "sass": "^1.50.1"
   }
 }
