--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "deploy": "npm run build && npx vercel ./dist"
   },
   "dependencies": {
+    "@frsource/tiny-carousel-react": "^0.3.8",
+    "@vitejs/plugin-react": "^1.0.7",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
@@ -22,8 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "vite": "^2.8.0",
-    "@vitejs/plugin-react": "^1.0.7"
+    "vite": "^2.8.0"
   },
   "devDependencies": {
     "eslint": "^8.11.0",
