--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "postcss": "^8.4.12",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-alice-carousel": "^2.6.1",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.3.0",
-    "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "vite": "^2.8.0"
   },
