--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.4.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.3.0",
+    "react-scroll": "^1.8.7",
     "slick-carousel": "^1.8.1",
     "vite": "^2.8.0"
   },
