--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-loading": "^2.0.3",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "slick-carousel": "^1.8.1",
